--- a/booExe3.html
+++ b/booExe3.html
@@ -34,10 +34,10 @@
                   Services
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Loan application</a></li>
+                  <li><a class="dropdown-item" href="#">Block Card</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Contact Bank!</a></li>
                 </ul>
               </li>
               <li class="nav-item">
