--- a/cssExe4.html
+++ b/cssExe4.html
@@ -65,14 +65,15 @@ margin: 0;
             <li><a href="home.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><select name="pro" id="pro">
-                <option value="pro"><a href="pro.html">Products</a></option>
-                <option value="Eng"><a href="eng.html">Engineering</a></option>
-                <option value="tel"><a href="tel.html">Telecom</a></option>
-                <option value="En"><a href="engergy.html">Energy</a></option>
-                <option value="fin"><a href="fn.html">Finance</a></option>
-                <option value="con"><a href="con.html">Consultancy</a></option>
+                <option value="pro"><a href="pro.html">Internship</a></option>
+                <option value="Eng"><a href="eng.html">Python-Django Fullstack</a></option>
+                <option value="tel"><a href="tel.html">PHP-Laravel Fullstack</a></option>
+                <option value="En"><a href="engergy.html">Mern Fullstack</a></option>
+                <option value="fin"><a href="fn.html">Flutter Mobile App</a></option>
+                <option value="con"><a href="con.html">React JS</a></option>
             </select></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="services.html">Placements</a></li>
+            <li><a href="services.html">Careers</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
